# ali-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
ali_cli/: __init__.py  auth.py  browser.py  cli.py  config.py  doctor.py  errors.py  messenger.py  models.py  monitor.py  otp_watcher.py  recovery.py  rfq.py  rfq_post.py  session_manager.py
docs/: KNOWN-ISSUES.md  RECON.md  SPEC.md
scripts/: bootstrap_gmail.py
tests/: test_e2e.py
